[gd_scene load_steps=20 format=3 uid="uid://eicvhjssa5j0"]

[ext_resource type="Script" path="res://SceneHolder.gd" id="1_fbbie"]
[ext_resource type="Shader" path="res://shaders/SceneHolderContainer.gdshader" id="2_r1rdy"]
[ext_resource type="PackedScene" uid="uid://cj3dpfr0vllda" path="res://levels/TestLevel.tscn" id="3_0q0xx"]
[ext_resource type="Texture2D" uid="uid://b1cxrymafb1rr" path="res://guis/golem_ore.png" id="4_dfeqh"]
[ext_resource type="Script" path="res://GameGUI.gd" id="4_k84vi"]
[ext_resource type="FontFile" uid="uid://dr5hbihcvdbr1" path="res://resources/MatchupPro.ttf" id="6_d7rg8"]
[ext_resource type="Texture2D" uid="uid://cllq16vocvt2g" path="res://shaders/transition_particle.png" id="6_prg2w"]
[ext_resource type="Texture2D" uid="uid://bkt6wg145gqev" path="res://guis/book_of_summons.png" id="7_lq1ja"]
[ext_resource type="Texture2D" uid="uid://b3dei6otg0iry" path="res://guis/bookgraph/book_of_summons_clicked.png" id="8_alekf"]
[ext_resource type="Texture2D" uid="uid://c8npok27rt437" path="res://guis/bookgraph/book_of_summons_hover.png" id="9_wa2jr"]
[ext_resource type="PackedScene" uid="uid://m54bvh24tffs" path="res://guis/BookGUI.tscn" id="11_21esd"]
[ext_resource type="AudioStream" uid="uid://dra2un23ssggu" path="res://resources/sound/summon.wav" id="12_vd16c"]
[ext_resource type="AudioStream" uid="uid://ce3xpoj3nvgl1" path="res://resources/sound/switch.wav" id="13_g0vjx"]
[ext_resource type="AudioStream" uid="uid://bks1ahlgmuvp1" path="res://resources/sound/movement.mp3" id="14_tye0e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_84f8y"]
shader = ExtResource("2_r1rdy")
shader_parameter/cam_offset = Vector2(0, 0)
shader_parameter/abberation_offset = Vector2(0, 0)
shader_parameter/zoom_scale = 1.0

[sub_resource type="Animation" id="Animation_hqvfn"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionEffects/ColorRect:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-140, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionEffects/ColorRect:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-1886, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TransitionEffects/Particles:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TransitionEffects/Particles:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TransitionEffects:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fsyoa"]
resource_name = "black_enter"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionEffects/ColorRect:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-140, -0.25, 0, 0.25, 0, -140, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionEffects/ColorRect:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-1886, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TransitionEffects/Particles:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0.25, 0.25, -0.25),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TransitionEffects/Particles:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1886, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TransitionEffects:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_0vpbx"]
resource_name = "black_exit"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionEffects/ColorRect:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-140, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionEffects/ColorRect:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1886, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TransitionEffects/Particles:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TransitionEffects/Particles:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(440, -0.25, 0, 0.25, 0, 2360, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TransitionEffects:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ftwsm"]
_data = {
"RESET": SubResource("Animation_hqvfn"),
"black_enter": SubResource("Animation_fsyoa"),
"black_exit": SubResource("Animation_0vpbx")
}

[node name="SceneHolder" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fbbie")
metadata/_edit_horizontal_guides_ = [1020.0]

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_84f8y")
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
scale = Vector2(2, 2)

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(960, 600)
render_target_update_mode = 4

[node name="TestLevel" parent="SubViewportContainer/SubViewport" instance=ExtResource("3_0q0xx")]

[node name="GameGUI" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_k84vi")
metadata/_edit_lock_ = true

[node name="ButtonCore" type="Button" parent="GameGUI"]
layout_mode = 0
offset_left = 43.0
offset_top = 1368.0
offset_right = 111.0
offset_bottom = 1441.0
scale = Vector2(2, 2)
toggle_mode = true
icon = ExtResource("4_dfeqh")

[node name="TipLabel" type="Label" parent="GameGUI"]
layout_mode = 0
offset_left = 37.0
offset_top = 1068.0
offset_right = 1867.0
offset_bottom = 1176.0
theme_override_fonts/font = ExtResource("6_d7rg8")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1

[node name="TitleLabel" type="Label" parent="GameGUI"]
layout_mode = 0
offset_left = 472.0
offset_top = 25.0
offset_right = 1436.0
offset_bottom = 133.0
theme_override_fonts/font = ExtResource("6_d7rg8")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1

[node name="BookButton" type="TextureButton" parent="GameGUI"]
layout_mode = 0
offset_left = 1721.0
offset_top = 1008.0
offset_right = 1781.0
offset_bottom = 1068.0
scale = Vector2(3, 3)
texture_normal = ExtResource("7_lq1ja")
texture_pressed = ExtResource("8_alekf")
texture_hover = ExtResource("9_wa2jr")

[node name="BookGUI" parent="GameGUI" instance=ExtResource("11_21esd")]
layout_mode = 1
offset_left = 2700.0
offset_top = 664.0
offset_right = 2700.0
offset_bottom = 664.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ftwsm")
}

[node name="TransitionEffects" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="TransitionEffects"]
offset_left = -140.0
offset_top = -1886.0
offset_right = 2011.0
offset_bottom = -442.0
color = Color(0.0196078, 0.054902, 0.101961, 1)

[node name="Particles" type="Node2D" parent="TransitionEffects"]

[node name="TransitionParticle" type="Sprite2D" parent="TransitionEffects/Particles"]
position = Vector2(2, -532)
scale = Vector2(2, 2)
texture = ExtResource("6_prg2w")

[node name="TransitionParticle2" type="Sprite2D" parent="TransitionEffects/Particles"]
position = Vector2(688, -722)
scale = Vector2(2, 2)
texture = ExtResource("6_prg2w")

[node name="TransitionParticle3" type="Sprite2D" parent="TransitionEffects/Particles"]
position = Vector2(1288, -509)
rotation = 1.5708
scale = Vector2(2, 2)
texture = ExtResource("6_prg2w")

[node name="TransitionParticle4" type="Sprite2D" parent="TransitionEffects/Particles"]
position = Vector2(1791, -678)
rotation = 1.5708
scale = Vector2(2, 2)
texture = ExtResource("6_prg2w")

[node name="AudioSummon" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_vd16c")

[node name="AudioSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_g0vjx")

[node name="AudioWalk" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_tye0e")
